<resources>
    <string name="app_name">VirtualStudyRoom</string>

    <!--Log in-->
    <string name="login_button">Start the App</string>
    <!--Navigation Bar-->
    <string name="nav_study_room">Study Room</string>
    <string name="nav_study_history">History</string>
    <string name="nav_yell_history">Yells</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="anonymous">Anonymous</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--Study Room -->
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="pause_button">PAUSE</string>
    <string name="min_text">min</string>
    <string name="yell_button_text">Yell</string>

    <!--Study History-->
    <string name="this_week">This Week (Hour)</string>
    <string name="last_week">Last Week (Hour)</string>

    <!--Yell History-->
    <string name="message_template">You got an Yell from</string>

    <!--Firestore field name-->
    <string name="fs_user_id">user_id</string>
    <string name="fs_user_display_name">user_name</string>
    <string name="fs_user_icon_url">user_icon_url</string>
    <string name="fs_start_time">start_time</string>
    <string name="fs_pause_start_time">pause_start_time</string>
    <string name="fs_status">status</string>
    <string name="fs_pause_total_time">pause_total_time</string>
    <string name="fs_registered_token">token</string>
    <string name="state_study">study</string>
    <string name="state_pause">pause</string>
    <string name="state_stop">stop</string>

    <string name="fs_send_to_registered_token">token</string>
    <string name="fs_send_at">sendAt</string>
    <string name="fs_send_from_name">name</string>
    <string name="fs_send_from_icon_url">iconUrl</string>
    <string name="fs_send_to_uid">toUserId</string>

    <string name="fs_sendable">sendable</string>


    <!-- For Firebase Authentication-->
    <string name="facebook_application_id" translatable="false">348902852710403</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb348902852710403</string>

    <string name="twitter_consumer_key" translatable="false">57I2l39dc8XdPelLE6YAlhHJY</string>
    <string name="twitter_consumer_secret" translatable="false">@string/MY_TWITTER_API_SECRET</string>

    <!--Firestorage-->
    <string name="study_user_collection">StudyUsers</string>
    <string name="yell_collections">Yells</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">StudyHistory</string>
    <string name="hello_blank_fragment">StudyRoom</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--content description-->
    <string name="login_content_desc">Shows the background image</string>
    <string name="widget_book_content_desc">Shows an icon of a book</string>
    <string name="widget_plus_content_desc">Shows an icon of a plus</string>
    <string name="widget_clock_content_desc">Shows an icon of a clock</string>
    <string name="underbar_content_desc">Shows an under bar</string>
    <string name="user_content_desc">Shows an icon of the user</string>
</resources>
