<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical">
    <LinearLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="1dp">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/book"
            android:contentDescription="@string/widget_book_content_desc"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/plus"
            android:contentDescription="@string/widget_plus_content_desc"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/clock"
            android:contentDescription="@string/widget_clock_content_desc"/>
    </LinearLayout>
    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="1dp"
        android:gravity="center"
        android:background="#ffffff"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/appwidget_text"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

</LinearLayout>