<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:contentDescription="@string/user_content_desc"
        android:id="@+id/current_user_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/anonymous"
        app:layout_constraintStart_toEndOf="@+id/current_user_icon"
        app:layout_constraintTop_toTopOf="@+id/current_user_icon" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/underbar_content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/current_user_icon"
        app:layout_constraintStart_toStartOf="@+id/current_user_name" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_status"
        app:layout_constraintStart_toEndOf="@+id/tv_status" />

    <TextView
        android:id="@+id/min_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_time"
        app:layout_constraintStart_toEndOf="@+id/tv_time" />

    <Button
        android:id="@+id/yell_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/yell_button_text"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/current_user_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/current_user_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>